# Split_Learning_Blokchain

./: .gitignore  README.md  contract_info.json  pyproject.toml
scripts/: train.py  visualize_results.py
src/blockchain/blockchain_code/: __init__.py  blockchain_manager.py  config.py  deployer.py
src/blockchain/blockchain_code/contracts/: TrainingRegistry.sol  __init__.py
src/blockchain/core/: __init__.py  client.py  coordinator.py  server.py
src/blockchain/data/: __init__.py  dataset_loader.py  preprocessor.py
src/blockchain/models/: __init__.py  base_model.py  client_model.py  server_model.py
src/blockchain/utils/: __init__.py  crypto.py  logger.py  metrics.py
tests/: test_ganache.py
